# spreadinterp

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  environment.yml  setup.py
.github/workflows/: ci.yml  conda.yaml
devtools/conda-build/: README.md  meta.yaml
docs/source/: api.rst  conf.py  index.rst  installation.rst  usage.rst
example/: example.py
src/: __init__.py  python_wrapper.cu  spreadinterp.cuh  utils.cuh
tests/: test_interp.py
